--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
     background-color: rgb(0, 94, 126);
   }
-
+h1{
+    font-family: Helvetica, sans-serif;
+    color:lightblue;
+}
   p{
-      font-family: Helvetica;
+      font-family: Helvetica, sans-serif;
       color: lightblue;
 }
